<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/january"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/january" />

            <CheckBox
                android:id="@+id/february"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/february" />

            <CheckBox
                android:id="@+id/march"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/march" />

            <CheckBox
                android:id="@+id/april"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/april" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/june"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/june" />

            <CheckBox
                android:id="@+id/july"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/july" />

            <CheckBox
                android:id="@+id/may"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/may" />

            <CheckBox
                android:id="@+id/august"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/august" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/september"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/september" />

            <CheckBox
                android:id="@+id/november"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/november" />

            <CheckBox
                android:id="@+id/october"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/october" />

            <CheckBox
                android:id="@+id/december"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/december" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>