<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="418dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/plantPictureExample"
                android:layout_width="match_parent"
                android:layout_height="340dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/addPlantButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="#FF9800"
                    android:text="@string/list_plant_add_plant" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/backToList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:backgroundTint="#CDDC39"
                        android:text="@string/list_plant_back_to_list_button" />

                    <Button
                        android:id="@+id/seeDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/list_plant_see_details" />

                </LinearLayout>

            </LinearLayout>

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="125dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/list_plant_common_name"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/list_plant_common_name_desc"
                        android:layout_width="230dp"
                        android:layout_height="30dp"
                        android:text="@string/list_plant_common_name_desc"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="125dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/list_plant_family_common_name"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/list_plant_family_common_name_desc"
                        android:layout_width="230dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/list_plant_family_common_name_desc"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="125dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/list_plant_family"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/list_plant_family_desc"
                        android:layout_width="230dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/list_plant_family_desc"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="125dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/list_plant_genus"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/list_plant_genus_desc"
                        android:layout_width="230dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/list_plant_genus_desc"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="125dp"
                        android:layout_height="31dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/list_plant_scientific_name"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/list_plant_scientific_name_desc"
                        android:layout_width="230dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="8dp"

                        android:autoText="false"
                        android:text="@string/list_plant_scientific_name_desc"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="125dp"
                        android:layout_height="31dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/list_plant_family_common_names" />

                    <TextView
                        android:id="@+id/list_plant_common_names"
                        android:layout_width="230dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:text="TextView" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>